--- a/.env
+++ b/.env
@@ -1,6 +1,2 @@
 BOT_TOKEN=8271767066:AAFsXZpJxuu2fT1lA6R-PE8d6dJzPNGDBXQ
-DB_HOST=127.0.0.1
-DB_PORT=5432
-DB_NAME=taxi_bot
-DB_USER=postgres
-DB_PASSWORD=Shohrux04
+DATABASE_URL=postgresql://taxi_bot_l0ej_user:wXEiY0u2YsheVDevjqMyRK2jdL7NwoTN@dpg-d63r1qpr0fns73br5jog-a/taxi_bot_l0ej
