--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 BOT_TOKEN=8271767066:AAFsXZpJxuu2fT1lA6R-PE8d6dJzPNGDBXQ
-DATABASE_URL=postgresql://taxi_bot_l0ej_user:wXEiY0u2YsheVDevjqMyRK2jdL7NwoTN@dpg-d63r1qpr0fns73br5jog-a/taxi_bot_l0ej
+DATABASE_URL=postgresql+asyncpg://taxi_bot_l0ej_user:wXEiY0u2YsheVDevjqMyRK2jdL7NwoTN@dpg-d63r1qpr0fns73br5jog-a/taxi_bot_l0ej
