--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
+# .env
 BOT_TOKEN=8271767066:AAFsXZpJxuu2fT1lA6R-PE8d6dJzPNGDBXQ
+
+# asyncpg formatida URL
 DATABASE_URL=postgresql+asyncpg://taxi_bot_l0ej_user:wXEiY0u2YsheVDevjqMyRK2jdL7NwoTN@dpg-d63r1qpr0fns73br5jog-a/taxi_bot_l0ej
